<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".suma2Activity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="111dp"
        android:layout_height="33dp"
        android:layout_marginTop="32dp"
        android:text="@string/sumanum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tnum1"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="53dp" />

    <EditText
        android:id="@+id/txtnum1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="68dp"
        android:layout_height="0dp"
        android:layout_marginTop="68dp"
        android:text="@string/tnum2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnum1" />

    <EditText
        android:id="@+id/lblresultado"
        android:layout_width="348dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:autofillHints="@string/emergente1"
        android:ems="10"
        android:inputType="number"
        android:text="@string/emergente1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="544dp" />

    <TextView
        android:id="@+id/lblresultado"
        android:layout_width="188dp"
        android:layout_height="78dp"
        android:layout_marginTop="52dp"
        android:text="@string/tbtcalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

</androidx.constraintlayout.widget.ConstraintLayout>